Fix header removing align center in all pages

--- a/resources/sass/base.scss
+++ b/resources/sass/base.scss
@@ -30,9 +30,9 @@ html, body {
   top: 18px;
 }
 
-.content {
-  text-align: center;
-}
+// .content {
+//   text-align: center;
+// }
 
 .title {
   font-size: 40px;
@@ -46,6 +46,10 @@ html, body {
   letter-spacing: .1rem;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+.links > a:hover {
+  text-decoration: none;
 }
 
 .m-b-md {
